migrating v3d changes